--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: "Alistair's Stuff"
 
 url                      : "https://Alistair-Johnson.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "/" # the subpath of your site, e.g. "/blog"
-repository               : "Alistair-Johnson" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "Alistair-Johnson/Alistair-Johnson.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 #teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -47,8 +47,8 @@ words_per_minute         : 200
 #reCaptcha:
 #  siteKey                :
 #  secret                 :
-atom_feed:
-  path                   : # blank (default) uses feed.xml
+#atom_feed:
+#  path                   : # blank (default) uses feed.xml
 #search                   : # true, false (default)
 #search_full_content      : # true, false (default)
 #search_provider          : # lunr (default), algolia, google
@@ -97,23 +97,23 @@ author:
   location         : "Somewhere..."
   email            :
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      # url: mailto:your.name@email.com
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
+   # - label: "Email"
+   #   icon: "fas fa-fw fa-envelope-square"
+   #   # url: mailto:your.name@email.com
+   # - label: "Website"
+   #   icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url: "https://twitter.com/"
-    - label: "Facebook"
-      icon: "fab fa-fw fa-facebook-square"
+      url: "https://twitter.com/JohnsonUSM"
+   # - label: "Facebook"
+   #   icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
+      url: "https://github.com/Alistair-Johnson"
+   # - label: "Instagram"
+   #   icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
 
 # Site Footer
@@ -121,13 +121,13 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url:
+      url:  "https://twitter.com/JohnsonUSM"
     #- label: "Facebook"
     #  icon: "fab fa-fw fa-facebook-square"
       # url:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url:  "https://github.com/Alistair-Johnson"
     #- label: "GitLab"
     #  icon: "fab fa-fw fa-gitlab"
       # url:
