--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Theme Settings
 #
 remote_theme: "mmistakes/minimal-mistakes"
+minimal_mistakes_skin: "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum" "sunrise"
 
 # Site Settings
 locale                   : "en-UK"
